# home3

./: CMakeLists.txt  README.md  docker-compose.yaml  optimization.md
config/: config.yaml
sql/: 01_schema.sql  02_data.sql  03_queries.sql
src/: main.cpp
src/handlers/: arrivals.hpp  auth.hpp  inventory.hpp  products.hpp  users.hpp
src/handlers/arrivals/get/: arrivals.cpp  arrivals.hpp
src/handlers/arrivals/post/: arrivals.cpp  arrivals.hpp
src/handlers/auth/post/: auth.cpp  auth.hpp
src/handlers/inventory/get/: inventory.cpp  inventory.hpp
src/handlers/inventory/post/: inventory.cpp  inventory.hpp
src/handlers/products/delete/: products.cpp  products.hpp
src/handlers/products/get/: products.cpp  products.hpp
src/handlers/products/patch/: products.cpp  products.hpp
src/handlers/products/post/: products.cpp  products.hpp
src/handlers/users/get/: users.cpp  users.hpp
